# template_rebuild

./: .clang-format  CMakeLists.txt  README.md  generate_msvc_compile.ps1
class_template/: CMakeLists.txt
class_template/inc/: pch.h
class_template/src/: demo_v1.cpp  demo_v2.cpp  demo_v3.cpp  demo_v4.cpp  demo_v5.cpp  demo_v6.cpp
cmake/: MyUsefulFuncs.cmake
concept_requires/: CMakeLists.txt
concept_requires/inc/: pch.h
concept_requires/src/: demo_v1.cpp  demo_v2.cpp  demo_v3.cpp  demo_v4.cpp  demo_v5.cpp  demo_v6.cpp  demo_v7.cpp  demo_v8.cpp  demo_v9.cpp
extension/class_template_split_file/: CMakeLists.txt
extension/display_instantiation/: CMakeLists.txt
extension/function_template_split_file/: main.cpp  test_template.h
fold_expression/: CMakeLists.txt
fold_expression/inc/: pch.h
fold_expression/src/: demo_v1.cpp  demo_v2.cpp  demo_v3.cpp
function_template/: CMakeLists.txt
function_template/inc/: pch.h
function_template/src/: demo_v1.cpp  demo_v10.cpp  demo_v11.cpp  demo_v12.cpp  demo_v13.cpp  demo_v14.cpp  demo_v15.cpp  demo_v16.cpp  demo_v2.cpp  demo_v3.cpp  demo_v4.cpp  demo_v5.cpp  demo_v6.cpp  demo_v7.cpp  demo_v8.cpp  demo_v9.cpp
sfinae/: CMakeLists.txt
sfinae/inc/: pch.h
sfinae/src/: demo_v1.cpp  demo_v2.cpp  demo_v3.cpp  demo_v4.cpp  demo_v5.cpp  demo_v6.cpp  demo_v7.cpp
template_full_specialization/: CMakeLists.txt
template_full_specialization/inc/: pch.h
template_full_specialization/src/: demo_v1.cpp  (+4 more)
template_partial_specialization/: CMakeLists.txt
tuple_package/: CMakeLists.txt
variable_template/: CMakeLists.txt
(+20 files in other folders)
